--- a/frontend/src/components/WomenPage/WomenPage.css
+++ b/frontend/src/components/WomenPage/WomenPage.css
@@ -1,4 +1,4 @@
-#women-page-image {
+/* #women-page-image {
     position: absolute;
     height: 100vh;
     width: 100vw;
@@ -63,4 +63,4 @@ line-height: 5vw;
 #women-body-4 {
     font-size: 1.2vw;
     font-family: 'Source Sans 3', sans-serif;
-}
+} */
