--- a/frontend/src/components/Womens2/Womens2.css
+++ b/frontend/src/components/Womens2/Womens2.css
@@ -1,3 +1,26 @@
-.mid-women-wrapper{
-    margin-bottom: 65rem;
+.mid-women-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-bottom: 45rem;
+    gap: 1rem;
+}
+
+#women2-img {
+    position: absolute;
+    height: 80vh;
+    width: 48vw;
+    object-fit: cover;
+    z-index: -1;
+    left: 0;
+    margin-left: 1rem;
+}
+
+#men2-img {
+    position: absolute;
+    height: 80vh;
+    width: 48vw;
+    object-fit: cover;
+    z-index: -1;
+    right: 0;
 }
