--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -9,7 +9,7 @@ nav{
 
 nav a{
     color: #00B5B8;
-    font-family: 'Koulen', sans-serif;
+    font-family: 'Cuprum', sans-serif;
     font-size: 35px;
 }
 
