--- a/frontend/src/components/Womens/Women.css
+++ b/frontend/src/components/Womens/Women.css
@@ -24,7 +24,7 @@
 }
 
 #women-page-header {
-    font-family: 'Koulen', sans-serif;
+    font-family: 'Cuprum', sans-serif;
     font-size: 5.5vw;
     margin: 0;
     margin-top: 15rem;
@@ -32,35 +32,35 @@
 
 #women-page-body {
     font-size: 5.5vw;
-    font-family: 'Source Sans 3', sans-serif;
+    font-family: 'Nunito', sans-serif;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
 #women-page-body-1 {
     font-size: 5.5vw;
-    font-family: 'Source Sans 3', sans-serif;
+    font-family: 'Nunito', sans-serif;
 }
 
 #women-body-1 {
     font-size: 2.5vw;
-    font-family: 'Source Sans 3', sans-serif;
+    font-family: 'Nunito', sans-serif;
     margin-top: 2.5rem;
     margin-bottom: 1rem;
 }
 
 #women-body-2 {
     font-size: 1.2vw;
-    font-family: 'Source Sans 3', sans-serif;
+    font-family: 'Nunito', sans-serif;
 }
 
 #women-body-3 {
     font-size: 1.2vw;
-    font-family: 'Source Sans 3', sans-serif;
+    font-family: 'Nunito', sans-serif;
     margin-top: 1rem;
 }
 
 #women-body-4 {
     font-size: 1.2vw;
-    font-family: 'Source Sans 3', sans-serif;
+    font-family: 'Nunito', sans-serif;
 }
