--- a/frontend/src/components/About/About.css
+++ b/frontend/src/components/About/About.css
@@ -1,40 +1,36 @@
-#splash-wrapper {
+#about-wrapper {
     display: flex;
     flex-direction: row;
-    margin-bottom: 28rem;
+    margin-bottom: 60rem;
 }
 
-#splash-image {
+#about-image {
     position: absolute;
     right: 0;
     height: 100vh;
-    width: 90vw;
+    width: 100vw;
     object-fit: cover;
     z-index: -1;
 }
 
-#splash-text-wrapper {
+#about-text-wrapper {
     position: relative;
     display: flex;
     flex-direction: column;
     margin-top: 15rem;
     color: white;
-    margin-left: 15rem;
+    margin-left: 10rem;
 }
 
-#splash-header {
+#about-header {
     font-family: 'Cuprum', sans-serif;
     font-size: 6vw;
     margin: 0;
     line-height: 4rem;
 }
 
-#splash-body {
-    font-size: 2.5vw;
-    font-family: 'Nunito', sans-serif;
-}
-
-#splash-body-2 {
-    font-size: 2.5vw;
+#about-body {
+    font-size: 4vw;
+    margin-top: 1rem;
     font-family: 'Nunito', sans-serif;
 }
